--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -33,6 +33,8 @@
     }
     #cuantos {
         margin-top: 140%;
+        position: absolute;
+        z-index: 5;
     }
     #thirdLeft {
         margin-top: 50%;
@@ -91,6 +93,7 @@ nav {
     top: -0%;
     height: auto;
     width: 45%;
+    z-index: 10;
 }
   
 #lead {
@@ -100,6 +103,30 @@ nav {
     top: -0%;
     height: auto;
     width: 45%;
+    z-index: 11;
+}
+
+#cuantos{
+    z-index: 100;
+    position: absolute;
+    margin-left: 45%;
+    margin-top: -15%;
+}
+
+#un{
+    -webkit-animation-delay: 0.3s;
+}
+
+#dos{
+    -webkit-animation-delay: 0.6s;
+}
+
+#tres{
+    -webkit-animation-delay: 0.9s;
+}
+
+#cuatro{
+    -webkit-animation-delay: 1.2s;
 }
 
 #app1 {
@@ -131,17 +158,37 @@ nav {
     width: 90%;
 }
 
-#prospectos {
+#video-background {
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -10;
+}
+
+#likes {
     height: auto;
     width: 33%;
     position: absolute;
-    margin-top: -19%;
+    margin-top: -10%;
     margin-left: 8%;
 }
 
 #foot {
     height: 10%;
     background:#434a4e;
+}
+
+#fourthLeft{
+    width: 35%;
+    margin-left: 6%;
+}
+
+#optimiza{
+    width: 35%;
+    margin-left: 10%;
 }
 
 #enviar {
@@ -175,6 +222,7 @@ h1 {
 
 h2 {
     color: #3a4d57;
+    font-weight: 300;
 }
 
 .up {
@@ -193,6 +241,10 @@ h2 {
 
 .parallax-container {
     height: 1000px;
+}
+
+.vid-div {
+    background-color: rgba(58, 77, 87, .8);
 }
 
 .bluem-div {
@@ -356,6 +408,7 @@ nav ul a {
     position: absolute;
     margin-top: -764px;
     transform: rotate(50deg);
+    z-index: 5;
 }
 
 .triangle2 {
@@ -366,4 +419,5 @@ nav ul a {
     margin-left: 1250px;
     margin-top: 710px;
     transform: rotate(50deg);
+    z-index: 5;
 }
