--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -53,7 +53,7 @@
             <hr>
             <h2 style="color: white">Te presentamos el
                 <b>canal de ventas Nº1
-                    <br> para PYMES en México.</b>
+                    <br> para empresas en México.</b>
             </h2>
         </div>
         <div class="col s12 m6 s6">
@@ -68,7 +68,10 @@
     </video>
 </div>
 
-<div id="second" class="parallax-container valign-wrapper blue-div">
+<div id="second" class="parallax-container valign-wrapper white-div">
+    <div class="parallax">
+        <img class="socialBackground" src="app/assets/img/office.webp">
+    </div>
     <div class="row">
         <div id="cinta" class="col l6 m6 s12">
             <img class="up1" src="app/assets/img/1.png" alt="">
@@ -80,7 +83,7 @@
             <div class="graphicElement">
             </div>
             <div class="secondElements">
-                <h1>
+                <h1 style="color: #3a4d57">
                     <b>Para todas las empresas</b>
                 </h1>
                 <h2 class="thicker">Koomkin esta diseñado para ayudar a
@@ -102,7 +105,7 @@
                 </h1>
                 <h2 class="socialMedia">Nuestro sistema de inteligencia artificial toma desiciones para
                     <b>reducir el costo por captar clientes nuevos y aumenta el retorno de inversión</b>
-                    <div>
+                    <div class="social-fa">
                         <br>
                         <div class="fa fa-instagram"></div>
                         <div class="fa fa-linkedin"></div>
@@ -111,6 +114,7 @@
                         <div class="fa fa-google"></div>
                         <div class="fa fa-youtube"></div>
                         <div class="fa fa-foursquare"></div>
+                        <div class="fa fa-envelope"></div>
                     </div>
                 </h2>
             </div>
@@ -121,15 +125,19 @@
     </div>
 </div>
 
-<div id="fourth" class="parallax-container valign-wrapper bluem-div">
-    <div class="row">
+<div id="fourth" class="parallax-container valign-wrapper bluet-div">
+    <div class="parallax">
+        <img class="socialBackground" src="app/assets/img/ipad.webp">
+    </div>
+    <div id="fElements" class="row">
         <div id="fourthLeft" class="col l5 m5 s12 invisible">
             <div class="graphicElement">
             </div>
-            <h1>
+            <h1 style="color: white">
                 <b>Información a tiempo</b>
             </h1>
-            <h2>Ingresa desde nuestra App y evalúa en tiempo real,
+            <h2 style="color: white">Ingresa desde nuestra App y evalúa en tiempo real
+                <br>
                 <b>el desempeño de tu campaña.</b>
             </h2>
         </div>
@@ -162,7 +170,10 @@
     </div>
 </div>
 
-<div id="team" class="parallax-container valign-wrapper gray-div">
+<div id="team" class="parallax-container valign-wrapper vid2-div">
+    <div class="parallax">
+        <img class="socialBackground" src="app/assets/img/vid2.webp">
+    </div>
     <div class="container">
         <div class="row">
             <div class="col l7 m7 s12 teamElements invisible">
@@ -272,6 +283,9 @@
         <h1 style="color: #3a4d57;">
             <b>Contacto</b>
         </h1>
+        <h3 style="color: #3a4d57;">
+            <b>Queremos escuchar sobre ti</b>
+        </h3>
         <div class="row">
             <div class="col l6 m6 s12">
                 <div class="card">
@@ -306,13 +320,12 @@
                     </div>
                 </div>
             </div>
-            <div class="adress col l6 m6 s12">
-                <b>Queremos escuchar sobre ti</b>
-                <p>Av. Horacio 1844 - 7C</p>
-                <p>Polanco, CDMX</p>
-                <br>
-                <b>contacto@koomkin.com</b>
-                <b>Tel: (55) 5535 - 0499</b>
+            <p>Polanco, CDMX</p>
+            <br>
+            <b>contacto@koomkin.com</b>
+            <br>
+            <b>(55) 5535 - 0499</b>
+            <div class="col l6 m6 s12">
             </div>
         </div>
     </div>
@@ -336,6 +349,9 @@
             method: "GET",
             dataType: "jsonp"
         });
+        $('#formulario').hide();
+        $('#mensajeContacto').addClass("animated fadeInLeft");
+        $('#mensajeContacto').show();
     }
 </script>
 
