fixed scroll animation

--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="#inicio" class="brand-logo">
-                        <img class="navlogo" height="25px" src="app/assets/img/Logo_Koomkin.png" alt="">
+                        <img class="navlogo" height="30px" src="app/assets/img/Logo_Koomkin.png" alt="">
                     </a>
                     <a href="#" data-activates="mobile-demo" class="button-collapse">
                         <i class="material-icons">menu</i>
@@ -20,7 +20,7 @@
                             <a href="#third">Nosotros</a>
                         </li>
                         <li class="tab">
-                            <a href="#fourth">Equipo</a>
+                            <a href="#team">Equipo</a>
                         </li>
                         <li class="tab">
                             <a href="#contacto">Contacto</a>
@@ -31,13 +31,13 @@
                             <a href="#inicio">Inicio</a>
                         </li>
                         <li>
-                            <a href="#servicios">Servicios</a>
+                            <a href="#second">Servicios</a>
                         </li>
                         <li>
-                            <a href="#nosotros">Nosotros</a>
+                            <a href="#third">Nosotros</a>
                         </li>
                         <li>
-                            <a href="#equipo">Equipo</a>
+                            <a href="#team">Equipo</a>
                         </li>
                         <li>
                             <a href="#contacto">Contacto</a>
@@ -98,20 +98,21 @@
     <div class="container">
         <div class="row">
             <div id="thirdLeft" class="col l7 m7 s12 invisible">
-                <div class="graphicElement">
+                <div class="graphicElement" style="border-bottom: 12px solid white;">
                 </div>
                 <h1>
                     <b>Un algoritmo inteligente</b>
                 </h1>
-                <h2 class="socialMedia">Nuestro sistema de inteligencia artificial toma desiciones para
-                    <b>reducir el costo por captar clientes nuevos y aumenta el retorno de inversión</b>
+                <h2 class="socialMedia">Nuestro sistema de
+                    <b>inteligencia artificial</b> toma desiciones para reducir el costo por captar clientes nuevos y aumenta
+                    el retorno de inversión
                     <div class="social-fa">
                         <br>
+                        <div class="fa fa-facebook"></div>
+                        <div class="fa fa-google"></div>
                         <div class="fa fa-instagram"></div>
                         <div class="fa fa-linkedin"></div>
                         <div class="fa fa-twitter"></div>
-                        <div class="fa fa-facebook"></div>
-                        <div class="fa fa-google"></div>
                         <div class="fa fa-youtube"></div>
                         <div class="fa fa-foursquare"></div>
                         <div class="fa fa-envelope"></div>
@@ -131,7 +132,7 @@
     </div>
     <div id="fElements" class="row">
         <div id="fourthLeft" class="col l5 m5 s12 invisible">
-            <div class="graphicElement">
+            <div class="graphicElement" style="border-bottom: 12px solid white;">
             </div>
             <h1 style="color: white">
                 <b>Información a tiempo</b>
@@ -224,21 +225,24 @@
         </div>
     </div>
 </div>
-<div id="datos" class="parallax-container valign-wrapper dblue-div">
+<div id="datos" class="parallax-container valign-wrapper bluem-div">
+    <div class="parallax">
+        <img class="socialBackground" src="app/assets/img/city.webp">
+    </div>
     <div class="container">
         <div class="row datosElements invisible">
             <div class="socialMedia">
-                <div class="col l12 m12 s12">
-                    <div class="graphicElement">
+                <div id="datosDiv">
+                    <div class="graphicElement" style="border-bottom: 12px solid white;">
                     </div>
-                    <h1 id="datosDiv">
+                    <h1>
                         <b>Datos divertidos</b>
                     </h1>
                 </div>
                 <div class="col l3 m3 s12">
                     <div id="un" class="carta">
                         <div class="mas">
-                            <h2 style="color: white;">+ </h2>
+                            <h3 style="color: white;">+ </h2>
                             <h2 class="counter timer count-title count-number" data-to="8000" data-speed="1500"></h2>
                         </div>
                         <h5>Clientes contentos</h5>
@@ -247,7 +251,7 @@
                 <div class="col l3 m3 s12">
                     <div id="dos" class="carta">
                         <div class="mas">
-                            <h2 style="color: white;">+ </h2>
+                            <h3 style="color: white;">+ </h2>
                             <h2 class="counter timer count-title count-number" data-to="50000" data-speed="1500"></h2>
                         </div>
                         <h5>Impresiones en los principales canales digitales</h5>
@@ -256,7 +260,7 @@
                 <div class="col l3 m3 s12">
                     <div id="tres" class="carta">
                         <div class="mas">
-                            <h2 style="color: white;">+ </h2>
+                            <h3 style="color: white;">+ </h2>
                             <h2 class="counter timer count-title count-number" data-to="11000" data-speed="1500"></h2>
                         </div>
                         <h5>Prospectos mensuales para nuestros clientes</h5>
@@ -265,7 +269,7 @@
                 <div class="col l3 m3 s12">
                     <div id="cuatro" class="carta">
                         <div class="mas">
-                            <h2 style="color: white;">+ </h2>
+                            <h3 style="color: white;">+ </h2>
                             <h2 class="counter timer count-title count-number" data-to="16000" data-speed="1500"></h2>
                         </div>
                         <h5>Reacciones en redes sociales</h5>
